# lab1

./: .gitignore  .gitmodules  CMakeLists.txt  Pipfile  README.md  hello.py  hello_typed.py
.eecs230/: CMakeLists.txt  README.md
.eecs230/cmake/: CMakeLists.txt
.eecs230/include/: eecs230.h
.eecs230/lib/catch/: CMakeLists.txt
.eecs230/lib/graphics/: CMakeLists.txt  Color_blender.cpp  Color_blender.h  color.cpp  color.h  graphics.h
.eecs230/lib/graphics/geometry/: affinity.h  bbox.h  posn.h
.eecs230/lib/graphics/raster/: Raster.cpp  Raster.h  bmp_header.cpp  bmp_header.h  color32.cpp  color32.h
src/: lab1.cpp
